--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/banco
+spring.datasource.username=root
+spring.datasource.password=Elguapo87
+server.port=8090
