--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<name>protopitpoBench</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-    <java.version>1.8</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +46,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>2.2.3</version>
 		</dependency>
 
 		<dependency>
