Se realizan ajustes y optimizacion de codigo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/banco
-spring.datasource.username=root
-spring.datasource.password=Elguapo87
+
+#DB en la nube
+spring.datasource.url=jdbc:mysql://sql9.freemysqlhosting.net:3306/sql9651343
+spring.datasource.username=sql9651343
+spring.datasource.password=w24zGGcGbg
 server.port=8091
 
 url.local.swagger = http://localhost:8091/swagger-ui.html#/
