--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 
 
 #DB en la nube
-spring.datasource.url=jdbc:mysql://sql9.freemysqlhosting.net:3306/sql9651343
-spring.datasource.username=sql9651343
-spring.datasource.password=w24zGGcGbg
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:19642/railway
+spring.datasource.username=postgres
+spring.datasource.password=6aDAbeE6D6gd5*DBB*Ba1EadBd*D5G*a
 server.port=8091
+
+
 
 url.local.swagger = http://localhost:8091/swagger-ui.html#/
